# tachi-import-scripts

./: .eslintrc  .gitignore  .prettierrc.json  Cargo.toml  Justfile  README.md  index.html  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.js
.github/workflows/: build-release.yml  electron-build-release.yml
assets/: compile-vendor.css
pages/: compile-main.css  index.html
src/: App.svelte  AuthContainer.svelte  Console.svelte  ContentMain.svelte  Divider.svelte  FileInputGroup.svelte  ipc-utils.ts  main.ts  stores.ts  tachi-info.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  lib.rs  main.rs
src-tauri/src/backend/: batch_manual.rs  beatoraja.rs  bms.rs  config.rs  log.rs  lr2.rs  sqlite.rs  usc.rs
src/Converters/: BeatorajaConvertComponent.svelte  LR2ConvertComponent.svelte  USCConvertComponent.svelte
src/common/: types.ts
src/electron/: App.svelte  AuthContainer.svelte  Console.svelte  ContentMain.svelte  ConvertSelect.svelte  Divider.svelte  FileInputGroup.svelte  InputGroup.svelte  ipc-utils.ts  main.ts  stores.ts
src/electron/Converters/: BeatorajaConvertComponent.svelte  LR2ConvertComponent.svelte  USCConvertComponent.svelte
src/node/converters/: beatoraja-db.ts  lr2-db.ts  usc-db.ts
src/node/util/: browser-win.ts  config.ts  logger.ts  prudence.ts  service.ts  sqlite3.ts  tachi-info.ts
