[package]
name = "import-scripts"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "import_scripts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34.0", features = ["bundled"] }
anyhow = "1.0.97"
tauri-plugin-dialog = "2"
bitflags = "2.9.0"
parking_lot = "0.12.3"
tracing = "0.1.41"
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = {version = "0.12.15", features = ["json"] }
tokio = "1.44.1"
tracing-subscriber = "0.3.19"

